// master_mapper.proto

syntax = "proto3";

message MapRequest {
  repeated int32 line_numbers = 1;  // Indexes of lines to be processed by the mapper
}

message MapResponse {
  bool success = 1;  // Indicates whether mapping was successful or not
}